--- a/style.css
+++ b/style.css
@@ -530,7 +530,7 @@ figure.alignleft, p .alignleft, p img .alignleft {
   margin-block: calc(var(--spacing) * 8);
   margin-right: calc(var(--spacing) * 8);
 }
-figure.wp-block-img.alignright img {
+figure.wp-block-image.alignright img {
   float: right;
   margin-block: calc(var(--spacing) * 8);
   margin-left: calc(var(--spacing) * 8);
